Closed Bug 629655 Opened 14 years ago Closed 14 years ago

JS_DumpHeap triggers JS_ASSERT(!rt->gcRunning)

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: peterv, Assigned: igor)

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(2 files)

Stack coming up.
Attached patch fixSplinter Review
The fix uses js_malloc/js_free not to affect the malloc counters during dumping.
Assignee: general → igor
Attachment #507846 - Flags: review?(anygregor)
Attachment #507846 - Flags: review?(anygregor) → review+
Its not used in firefox. We should take it if it helps peterv debug.
http://hg.mozilla.org/tracemonkey/rev/5dbc4a422c1b
Whiteboard: fixed-in-tracemonkey
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: