bug 629655 - avoid influencing the malloc GC counters when dumping the heap. r=anygregor